# voice-status-report-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/voice_status_report_mcp_server/: __init__.py  server.py
